--- a/FGM/Views/Shared/_Layout.cshtml
+++ b/FGM/Views/Shared/_Layout.cshtml
@@ -322,6 +322,18 @@
                                         <p>လောင်းရန်</p>
                                     </a>
                                 </li>
+                                <li class="nav-item">
+                                    <a href="@Url.Action("MatchResultEntry","Match")" class="nav-link">
+                                        <i class="far fa-check-circle nav-icon text-info"></i>
+                                        <p>ပွဲပြီးရလာဒ်များဖြည့်သွင်းရန်</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="@Url.Action("BookieConfirm","Bookie")" class="nav-link">
+                                        <i class="far fa-check-circle nav-icon text-info"></i>
+                                        <p>ဒိုင်ဆီတင်ရန်</p>
+                                    </a>
+                                </li>
                             </ul>
                         </li>
                         <li class="nav-item has-treeview">
